[package]
name = "every-bignum"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6.4"
bytemuck = { version = "1.17.1", features = ["derive"] }

awint = "0.17.0"
crypto-bigint = "0.5.5"
dashu = "0.4.2"
ibig = "0.3.6"
malachite = "0.4.15"
num-bigint = "0.4.6"
rug = "1.25.0"

[dev-dependencies]
rand_dev = "0.1.1"
criterion = { version = "0.5" }

[[bench]]
name = "comparison"
harness = false
